# OpenGL-sample

./: CMakeLists.txt  README.md
Sources/Core/: Core.cpp  Core.hpp  Starter.cpp  Window.cpp
Sources/Core/Universe/: Item.cpp  Item.hpp  Universe.cpp
